WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286351
REGRESSION(
288690@main
): [GStreamer] Broke non-GL video rendering
https://bugs.webkit.org/show_bug.cgi?id=286351
Summary
REGRESSION(288690@main): [GStreamer] Broke non-GL video rendering
Philippe Normand
Reported
2025-01-22 03:12:07 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-22 04:25:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39374
EWS
Comment 2
2025-01-22 06:50:08 PST
Committed
289238@main
(590e5e3c35ae): <
https://commits.webkit.org/289238@main
> Reviewed commits have been landed. Closing PR #39374 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-22 06:51:13 PST
<
rdar://problem/143392212
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug