REGRESSION(288690@main): [GStreamer] Broke non-GL video rendering https://bugs.webkit.org/show_bug.cgi?id=286351

Reviewed by Xabier Rodriguez-Calvar.

The main issue was that our video sink was trying to chain to non-existent unlock and unlock_stop
basesink methods. Driving-by the code was cleaned-up a bit as well.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::registerWebKitGStreamerElements):
* Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(webkitVideoSinkRequestRender):
(webkitVideoSinkUnlock):
(webkitVideoSinkUnlockStop):
(webkitVideoSinkStop):
(webkitVideoSinkSetCaps):
(webkitVideoSinkEvent):
(_WebKitVideoSinkPrivate::_WebKitVideoSinkPrivate): Deleted.
(_WebKitVideoSinkPrivate::~_WebKitVideoSinkPrivate): Deleted.
* Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.h:

Canonical link: https://commits.webkit.org/289238@main